# SwarmMon

./: .gitignore  DISCLAIMER.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md
agent/swarmmon_agent/: pyproject.toml
agent/swarmmon_agent/swarmmon_agent/: client.py  config.py  local_buffer.py  main.py
agent/swarmmon_agent/swarmmon_agent/adapters/ros2_simulation/: diagnostics_collector.py  field_fleet_stack.py  fleet_constants.py  fleet_gateway.py  fleet_status_publisher.py  graph_collector.py  live_stack.py  qos_profiles.py  ros2_harness.py  topic_freshness.py
agent/swarmmon_agent/tests/: test_buffer.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: alert_service.py  alert_worker.py  auth.py  config.py  database.py  fleet_ingest.py  fleet_live.py  fleet_registry.py  fleet_standard.py  fleet_summary.py  health_rules.py  incident_engine.py  main.py  models.py  resend_client.py  scenario_loader.py  scenario_report_engine.py  scenario_reset.py  schemas.py  services.py  time_utils.py
backend/app/routers/: events.py  fleet_ops.py  incidents.py  robots.py  scenarios.py
backend/tests/: test_alerts.py  test_api.py  test_fleet_ingest.py  test_time_utils.py
backend/tests/fixtures/: sample_events.jsonl
config/: fastdds_wsl.xml
dashboard/: index.html  nginx.conf  package-lock.json  package.json
docs/: README.md  dev_environment.md  first_client_deploy.md  fleet_ingest_standard.md  ros2_live.md
examples/: docker-compose.yml
scripts/: dev_backend.sh  dev_dashboard.sh  env.sh  onboard_field_fleet.sh  ros2_live.sh  setup.sh  (+1 more)
(+31 files in other folders)
