[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmmon-agent"
version = "0.1.0"
description = "SwarmMon ROS 2 simulation agent"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
ros2 = []
dev = ["pytest>=8.3.0"]

[project.scripts]
swarmmon-agent = "swarmmon_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmmon_agent*"]
